# project_options

./: .clang-tidy  .cmake-format.yaml  .cmake-format.yml  .gitignore  .gitmodules  .ninja_log  CMakeCache.txt  CMakeLists.txt  Doxyfile.doxygen-docs  Index.cmake  LICENSE.txt  Makefile  README.md  Taskfile.yml  Taskfile_windows.yml  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja  cmake_install.cmake  conf.py  conf_8py.html  conf_8py.js  cspell.config.yaml  dir_68267d1309a1af8e8297ef4c3efbcdba.html  docker-compose.yml  files.html  genindex.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_run_vcpkg.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_target_disable_static_analysis.html  md_src_run_vcpkg.html  md_src_target_disable_static_analysis.html  md_src_target_include_system_directories.html  md_src_target_link_cuda.html  md_src_target_link_system_libraries.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  (+9 more)
cmake/: Conan.cmake  Doxygen.cmake  Index.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
docker/: Dockerfile  Dockerfile.aarch64  Dockerfile.arm  Dockerfile.arm-bare-metal  Dockerfile.emscripten  Dockerfile.mingw  Dockerfile.pico  Taskfile.yml  build.emscripten.sh  build.mingw.sh  build.sh  entrypoint.emscripten.sh  entrypoint.sh  test.sh
docs/: CMakeLists.txt  Taskfile.yml  conf.py.in  index.rst  update_versions.py
docs/cmake/: FindSphinx.cmake
docs/root/: index.html
docs/root/css/: company_style.css
docs/root/js/: version_switcher.js
docs/src/: Readme_top.md  cross-compilation.md  dynamic_project_options.md  enable_cross_compiler.md  index.rst  package_project.md  project_options.md  project_options.rst  project_options_api.md  project_options_example.md  run_vcpkg.md  target_configure_dependencies.md  target_disable_static_analysis.md  target_find_dependencies.md  target_include_header_directory.md  target_include_interface_directories.md  target_include_interface_directory.md  target_link_cuda.md
docs/templates/: layout.html  versions.html
doctrees/: CMakeLists.doctree  README.doctree  environment.pickle  index.doctree
examples/: Taskfile.yml
html/: .buildinfo  .buildinfo.bak  CMakeLists.html  License_8md.html  README.html  README_8md.html  Readme__top_8md.html  conf_8py.html  conf_8py.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4fef79e7177ba769987a8da36c892c5f.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dynamic__project__oprions_8md.html  dynamic__project__options_8md.html  enable__cross__compiler_8md.html  files.html  files_dup.js  genindex.html  graph_legend.html  index.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_License.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_README.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_Readme_top.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_dynamic_project_oprions.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_package_project.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_project_options.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_project_options_api.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_project_options_example.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_run_vcpkg.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_target_disable_static_analysis.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_target_include_system_directories.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_target_link_cuda.html  md__home_aminya_GitHub_Cpp_project_options_docs_src_target_link_system_libraries.html  md__home_aminya_project_options_docs_src_License.html  md__home_aminya_project_options_docs_src_Readme_top.html  md__home_aminya_project_options_docs_src_dynamic_project_options.html  md__home_aminya_project_options_docs_src_enable_cross_compiler.html  md__home_aminya_project_options_docs_src_package_project.html  md__home_aminya_project_options_docs_src_project_options_api.html  md__home_aminya_project_options_docs_src_project_options_example.html  (+54 more)
js/: version_switcher.js  versions.js
search/: all_a.js  files_2.js  pages_0.js  searchdata.js  variables_0.js  variables_4.js  variables_b.js  variables_d.js  variables_e.js
src/: Cache.cmake  Clang.cmake  Common.cmake  CompilerWarnings.cmake  Conan.cmake  CrossCompiler.cmake  Cuda.cmake  DefaultedOptions.cmake  DetectCompiler.cmake  Doxygen.cmake  DynamicProjectOptions.cmake  Git.cmake  GlobalOptions.cmake  Hardening.cmake  Index.cmake  InterproceduralOptimization.cmake  Linker.cmake  MinGW.cmake  Optimization.cmake  Options.cmake  Package.cmake  PackageProject.cmake  Readme_top.html  (+19 more)
test/: CMakeLists.txt  escape.cpp  main.cpp  vcpkg.json
test/css/: my_custom_theme_extra.css
test/include/mylib/: lib.hpp
test/libs/: CMakeLists.txt
test/libs/mythirdpartylib/: CMakeLists.txt
test/libs/mythirdpartylib/include/: Foo.hpp
test/libs/mythirdpartylib/src/: Foo.cpp
test/src/main/: main.cpp
test/src/mylib2/: lib.cpp
tests/emscripten/: CMakeLists.txt  Taskfile.yml  main.cpp  vcpkg.json
tests/install/: CMakeLists.txt  Taskfile.yml  Taskfile_windows.yml  conanfile.txt  vcpkg.json
tests/install/src/: another_main.cpp
tests/myproj/: CMakeLists.txt  Taskfile.yml  Taskfile_windows.yml  conanfile.txt  vcpkg.json
tests/myproj/cmake/: rpath.cmake
tests/myproj/include/mylib/: lib.hpp
tests/myproj/include/mylib2/: lib.hpp
tests/myproj/libs/mythirdpartylib/: CMakeLists.txt
tests/myproj/libs/mythirdpartylib/include/: Foo.hpp
tests/myproj/libs/mythirdpartylib/src/: Foo.cpp
tests/myproj/src/main/: main.cpp
tests/myproj/src/mylib2/: lib.cpp
tests/myproj/tests/: CMakeLists.txt
tests/myproj/tests/mylib/: lib.cpp
tests/myproj/tests/mylib2/: lib.cpp
tests/myproj/vcpkg_triplets/: arm-neon-android.cmake  arm64-android.cmake  arm64-windows.cmake  x64-android.cmake
tests/rpi3/: CMakeLists.txt  Taskfile.yml  main.c
tests/rpi4/: CMakeLists.txt  Taskfile.yml  main.cpp
tests/rpi4/cmake/: my-toolchain.cmake
(+148 files in other folders)
